<resources>
    <string name="app_name">淘满家</string>
    <string name="no_found_network">无网络连接</string>
    <string name="loading">正在加载...</string>
    <string name="loadFail">加载不出数据</string>
    <string name="loadFail_net">网络不给力</string>
    <string name="loadFail_reload">点击屏幕重试</string>
    <string name="no_data">啥都没有</string>
    <string name="load_all_finish">全部加载完毕</string>

    <!-- drawerlayout -->
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="ok">确   认</string>

    <string name="exit_confirm">再点一次退出程序</string>

    <string name="user_text_red_envelope">我的红包</string>
    <string name="user_text_pension">养老积分</string>
    <string name="user_text_share">分享积分</string>
    <string name="user_text_spirit">盛世金元</string>
    <string name="user_text_case">现金账户</string>
    <!--盛世，分享等-->
    <string name="user_text_pension_rule">
        养老积分收益说明：
            所有已正式注册为本商城（已下载APP）的会员，
        在消费区每消费100元人民币，本商城即赠送1个养老积分，
        每人获赠的最高积分额是1000个积分，积分赠送有一定
        的限额，送完为止，所有获赠的积分都有持续
        增值的空间（永不下跌）。
    </string>
    <string name="user_text_share_rule">
        分享收益说明：
            所有已正式注册本商城（已下载APP）的会员，
        将本商城分享给其他消费者，并帮助其免费注册
        （并下载APP）成为会员，分享人将终身获得被分
        享人在本商城消费区消费金额5%的收益。
    </string>
    <string name="user_text_spirit_rule">
        盛世金元收益说明：
            所有已正式注册为本商城（已下载APP）的会员，
        将本商城分享给其他消费者，并帮助其免费注册
        （并下载APP）成为会员，本商城将赠送相应的
        盛世金元给双方，分享人可凭盛世金元到
        商城“换购区”换购产品。
    </string>
    <string name="user_text_red_envelope_rule">
        共享大红包收益说明：
            所有已正式注册为本商城（已下载APP）的会员，

        在消费区累计消费达到5000元人民币（不限时间）

        即可领取当月产生的共享大红包一个（以此类推），

        大红包金额为当月红包池的总金额除以当月消费达标人数。
    </string>
    <string name="user_text_case_rule">

        可使用金额 ： 充值金额减去已使用金额

        可提现金额 ： 红包金额加上分享金额

        充值剩余金额 ： 充值总金额减去已使用金额
    </string>

    <!--盛世，分享等-->

    <string name="user_order_1">待付款</string>
    <string name="user_order_2">待发货</string>
    <string name="user_order_3">待收货</string>
    <string name="user_order_4">待评价</string>
    <string name="user_order_5">退换/退款</string>

    <string name="setting_about">关于我们</string>
   <!-- <string name="setting_about_content"><p style="line-height: 2em;"><span style="font-size: 14px; font-family: 宋体, SimSun;">&nbsp; 淘满家商城</span><span style="font-size: 14px; font-family: 宋体, SimSun;">（www.taomanjia.cn)隶属于上海烜赫电子商务有限公司旗下“互联网+”电子商务平台，是通过互联网及移动互联网等各种新颖、高效的网络售卖方式， 面向全国消费者提供数码家电、服装鞋帽、食品饮料、家饰家纺、居家生活等二十大类时尚百货精品交易与服务。致力于为消费者提供更专业、更便捷、更丰富、更诚信的网上购物体验！<br/>&nbsp; 淘满家是淘满家<span style="font-family: 宋体, SimSun; line-height: 32px;">商城</span>手机客户端购物APP，是针对手机用户开发的客户端软件，致力于为手机用户提供更健康、舒适和安全的购物体验。</span></p><p style="line-height: 2em; text-align: center;"><span style="font-family: 宋体, SimSun; font-size: 14px;">&nbsp;淘满家<span style="font-size: 14px; font-family: 宋体, SimSun; line-height: 32px;">商城</span></span></p>
            </string>-->
    <string name="setting_suggestion">意见反馈</string>
    <string name="setting_check">检测更新</string>

    <string name="reg_getCheck_code">获取验证码</string>
    <!--个人中心-->
    <string name="contact_wx">请添加\"淘满家\"微信公众号</string>
    <string name="download_qrcode">扫描二维码下载APP,注册会员</string>
    <string name="shared_qrcode">扫描二维码下载APP,注册会员</string>

    <string name="security_uppwd">修改登陆密码</string>
    <string name="security_uppwd_pay">修改支付密码</string>
    <string name="security_upphone">绑定手机</string>

    <!--绑定银行卡-->
    <string name="applybinding">申请绑定</string>
    <string name="cash_user_bind_name">开户姓名</string>
    <string name="cash_user_bind_bank_type">绑定类型：现金账户</string>
    <string name="cash_user_bind_bank_number">银行卡号</string>
    <string name="cash_user_bind_bank">开户银行</string>
    <string name="cash_user_bind_note">请填写你本人的银行卡信息。</string>
    <!--地址信息-->
    <string name="address_add_default">设为默认地址</string>
    <string name="address_add_username">收货人：</string>
    <string name="address_add_username_hint">请填写您的姓名</string>
    <string name="address_add_userphone">手机号码：</string>
    <string name="address_add_userphone_hint">请填写您的手机号码</string>
    <string name="address_add_user_region">所在地区：</string>
    <string name="address_add_details_address">详细地址：</string>
    <string name="address_add_details_address_hint">街道、楼牌号等</string>
    <string name="selset_address">请选择</string>

    <string name="item_addressinfo_recipient_shanchu" >删除</string>
    <string name="item_addressinfo_recipient_bianji">编辑</string>
    <string name="item_addressinfo_recipient_setdefault" >默认</string>
    <string name="item_addressinfo_recipient_address" />
    <string name="item_addressinfo_recipient_phone">手机号</string>
    <string name="item_addressinfo_recipient_name">收货人</string>
    <!--地址信息-->
    <!--四大收益-->
    <string name="red_envelopes_income_have"> 元  等你来拿</string>
    <string name="red_envelopes_income_num"> 元  等你来拿</string>
    <!--四大收益-->
    <!--个人中心-->
</resources>
