<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linearlayout_divider_height_gray"
            android:showDividers="middle"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_default"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/address_add_username" />

                <EditText
                    android:id="@+id/address_add_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:maxLength="10"
                    android:hint="@string/address_add_username_hint"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_default"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/address_add_userphone" />

                <EditText
                    android:id="@+id/address_add_userphone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:background="@null"
                    android:hint="@string/address_add_userphone_hint"
                    android:paddingLeft="5dp" >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/address_add_user_region_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_default"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/address_add_user_region" />

                <TextView
                    android:id="@+id/address_add_user_region"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:drawableRight="@drawable/rightbtn"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_default"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/textsize_common"
                    android:gravity="center_vertical"
                    android:text="@string/address_add_details_address" />

                <EditText
                    android:id="@+id/address_add_details_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/address_add_details_address_hint"
                    android:paddingLeft="5dp" >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/reg_default"
                android:layout_marginLeft="5dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/address_add_default" />

                <ImageView
                    android:id="@+id/address_add_default"
                    android:layout_width="52dp"
                    android:layout_height="30.5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/address_default_off" />
            </RelativeLayout>

            <Button
                android:id="@+id/address_add_ok"
                style="@style/Button_Style_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>

    </ScrollView>

