<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_c"
        android:orientation="vertical">

        <ViewStub
            android:id="@+id/user_login_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout="@layout/include_user_login" />

        <ViewStub
            android:id="@+id/user_login_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout="@layout/include_user_no_login" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:padding="@dimen/padding_10dp"
            android:divider="@drawable/linearlayout_divider_width_gray"
            android:showDividers="middle"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/user_pending_payment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_order_1"
                android:text="@string/user_order_1"/>
            <TextView
                android:id="@+id/user_delivered"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_order_2"
                android:text="@string/user_order_2"/>
            <TextView
                android:id="@+id/user_received"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_order_3"
                android:text="@string/user_order_3"/>
            <TextView
                android:id="@+id/user_evaluated"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_order_4"
                android:text="@string/user_order_4"/>
            <TextView
                android:id="@+id/user_return"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_order_5"
                android:text="@string/user_order_5"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
