<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_no_login_rl"
    android:layout_width="match_parent"
    android:background="@drawable/user_login_bg_no"
    android:layout_height="240dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_10dp"
        android:text="欢迎来到陶满家商城"/>
    <ImageView
        android:id="@+id/user_no_login_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_settings"
        android:padding="15dp"
        android:layout_alignParentRight="true"/>
    <ImageView
        android:id="@+id/user_no_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_unlogin"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/linearlayout_divider_height_white"
        android:showDividers="middle"
        android:background="#22000000"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:padding="@dimen/margin_10dp"
            android:text="@string/user_text_red_envelope"
            android:drawableTop="@drawable/user_redbag"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:padding="@dimen/margin_10dp"
            android:drawableTop="@drawable/user_old_jifen"
            android:text="@string/user_text_pension"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:padding="@dimen/margin_10dp"
            android:drawableTop="@drawable/user_share_jifen"
            android:text="@string/user_text_share"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:padding="@dimen/margin_10dp"
            android:drawableTop="@drawable/user_jinyuan"
            android:text="@string/user_text_spirit"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>
